Fixed pets info sidebar data into a template tag. Also added topbar scrollbar for small displays.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -235,7 +235,12 @@ main.wrapper {
     .wrapper {
         min-width: 0;
     }
-    
+
+    header {
+        overflow-x: scroll;
+        overflow-y: hidden;
+    }
+
 }
 
 .sidebar-r {
